--- a/documentation/index.html
+++ b/documentation/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Documentation - Aria Business HTML Landing Page Template</title>
+    <title>Documentation - R-Pro Travels</title>
 
     <!-- Styles -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,600" rel="stylesheet">
@@ -28,7 +28,7 @@
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
-			<p>Aria - Landing Page<br> Documentation</p>
+			<p>R-Pro Travels And Tour <br> Documentation</p>
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                 </li>
@@ -64,8 +64,8 @@
                 <div class="row">
                     <div id="introduction" class="col-lg-12">
                         <h1>INTRODUCTION</h1>
-                        <p>Hello and thank you for using Aria Business HTML Landing Page Template. Aria is an HTML landing page template built with Bootstrap featuring morphtext, text slider, grid filtering, lightbox details, count-to numbers, call request and contact form.</p>
-						<p>Built with Bootstrap 4, HTML5, CSS3, PHP and JavaScript it will help you achieve your online marketing goals in a beautiful and efficient manner.</p>
+                        <p>Hello and thank you for using R-Pro Travels And Tours Limited . R-Pro Travels and Tours Limited built with R-Pro Group featuring morphtext, text slider, grid filtering, lightbox details, count-to numbers, call request and contact form.</p>
+						<p>Built with Bootstrap 4, HTML5, CSS3, PHP and JavaScript it will help you achieve your desired travelling experience in a beautiful and efficient manner.</p>
 						<p>Frameworks and toolkits used: Bootstrap 4, Popper, jQuery, jQuery Easing, Validator, Isotope, Magnific Popup, Swiper, CountTo</p>
 						<p>You can edit the template's Html, Css, Php, Js files with your preferred text and code editor: <a href="https://notepad-plus-plus.org/">Notepad++</a>, <a href="https://code.visualstudio.com/">Visual Code</a>, <a href="https://www.sublimetext.com/">Sublime</a> or any other...</p>
 						<p>For image editing you can use <a href="http://www.adobe.com/products/photoshop.html">Adobe Photoshop</a> or any other graphic editor of your choice.</p>
@@ -85,7 +85,7 @@
 							<ul>
 								<li><b>Css</b> - Bootstrap, Font Awesome, Magnific Popup, Swiper and the template's custom stylesheet styles.css</li>
 								<li><b>Images</b> - Images used throughout the template including the favicon and logo</li>
-								<li><b>Js</b> - JavaScript files for Bootstrap, Popper, jQuery, jQuery Easing, Magnific Popup, Swiper, Validator and Aria's custom scripts: scripts.js</li>
+								<li><b>Js</b> - JavaScript files for Bootstrap, Popper, jQuery, jQuery Easing, Magnific Popup, Swiper, Validator and R-Pro's custom scripts: scripts.js</li>
 								<li><b>Php</b> - PHP script files for the contact forms</li>
 								<li><b>Webfonts</b> - Font Awesome files</li>
 							</ul>
@@ -198,7 +198,7 @@
 					<div id="icons" class="col-lg-12">
                         <h1>ICONS</h1>
 						<h3>Font Awesome Icons</h3>
-						<p>Aria uses <a href="http://fontawesome.io/">Font Awesome</a> icon font in many sections and elements.
+						<p>R-Pro Travels uses <a href="http://fontawesome.io/">Font Awesome</a> icon font in many sections and elements.
 						<p>To change one of the Font Awesome icons you can simply replace the classes that you'll find in index.html e.g. fa-binoculars, fa-list-alt, fa-chart-pie with the ones that you need from <a href="http://fontawesome.io/icons/">http://fontawesome.io/icons/</a></p>
 
 						<h3>Social Media Icons</h3>
@@ -313,11 +313,11 @@ function cformSuccess() {
 					
 					<div id="support" class="col-lg-12">
 						<h1>SUPPORT</h1>
-						<p>Because of limited resources at this point I am not able to provide support for free items but don't hesitate to send your questions at <a href="mailto:lucian@inovatik.com">lucian@inovatik.com</a> and I will try to help and at least point you in the right direction.</p>
+						<p>Because of limited resources at this point I am not able to provide support for free items but don't hesitate to send your questions at <a href="mailto:customercare@rprogroup.net">customercare@rprogroup.net</a> and I will try to help and at least point you in the right direction.</p>
 					</div> <!-- end of support -->
 										
 					<div class="col-lg-12">
-						<p class="footer">Aria - Business HTML Landing Page Template by <a href="https://inovatik.com">Inovatik</a></p>
+						<p class="footer">R-Pro travels and tours limited by <a href="https://rprogroup.net">rprogroup</a></p>
 					</div>
                 </div>
             </div>
